--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE>
+<!DOCTYPE HTML>
 <html>
 
 <head>
@@ -62,24 +62,26 @@
                 <div class='header-date'>
                   <h2 class='title'>Twitter Bot</h2>
                 </div>
-                <p>Sentinment Analyzer and Tweeting from a private account</p>
+                <p>Find the most polarizing Tweets about a subject <br>
+                Tweet or respond anonymously</p>
                 <a href={{url_for('project',_anchor='twitterbot')}}><button type="button" class="btn btn-primary">Tweet</button></a>
 
           </div>
 
         </div>
 
-<!--
-        <div class='row mid'>
 
-          <div class='post-content'>
+        <div class='row-mid'>
+
+          <div class='post-content center-div'>
             <div class='header-date'>
-              <a target=_blank href=http://hangman.zone> <h2 class='title'>Github</h2></a>
+                <h2 class='title'>PresTweets</h2>
             </div>
-            <p>Check out my Github</p> <br>
+            <p>Aggregating tweets from all 2020 democratic <br> presidential candidates into one feed</p> <br>
+            <a target=_blank href="https://twitter.com/TweetsPres"><button type="button" class="btn btn-primary">Check it out</button></a> <br> <br>
             </div>
 
-
+<!--
             <div class='post-content'>
               <div class='header-date'>
                 <h2 class='title'>Fun Zone</h2>
@@ -87,9 +89,9 @@
               <p>Look at it, it's so fun.</p>
             </div>
 
-
+-->
         </div>
-      -->
+
 
         <div class='row right'>
 
@@ -99,8 +101,8 @@
             <div class='header-date'>
              <h2 class='title'> Reddit Bot </h2>
             </div>
-            <p>Searching made easy</p> <br>
-            <a href={{url_for('project',_anchor='redditbot')}}><button type="button" class="btn btn-primary">Check it out</button></a> <br> <br>
+            <p>Searching and posting made easy</p> <br>
+            <a href={{url_for('project',_anchor='redditbot')}}><button type="button" class="btn btn-primary">Try it</button></a> <br> <br>
 
           </div>
 
@@ -108,7 +110,7 @@
                 <div class='header-date'>
                   <h2 class='title'>Instagram Bot</h2>
                 </div>
-                <p>Post to a public account</p>
+                <p>Post to a public account anonymously</p>
                 <a href={{url_for('project',_anchor='instabot')}}><button type="button" class="btn btn-primary">Post</button></a>
           </div>
 
